--- a/www/index.html
+++ b/www/index.html
@@ -1,45 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" >
+  <head>
+    <meta charset="UTF-8">
+    <title>Tranquility</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./css/normalize.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/ico" href="./favicon.ico">
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Tranquility</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/normalize.min.css">
-
-
-      <link rel="stylesheet" href="css/style.css">
-
-
-</head>
-
-<body>
-
-  <div class="container">
-
+  <body>
+    <div class="container">
         <h1>Tranquility</h1>
-
         <div class="bird-container bird-container--one">
-                <div class="bird bird--one"></div>
+          <div class="bird bird--one"></div>
         </div>
-
         <div class="bird-container bird-container--two">
-                <div class="bird bird--two"></div>
+          <div class="bird bird--two"></div>
         </div>
-
         <div class="bird-container bird-container--three">
-                <div class="bird bird--three"></div>
+          <div class="bird bird--three"></div>
         </div>
-
         <div class="bird-container bird-container--four">
-                <div class="bird bird--four"></div>
+          <div class="bird bird--four"></div>
         </div>
-
-</div>
-
-
-
-</body>
-
+    </div>
+  </body>
 </html>
-
