Fix ancient typo

--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
   <head>
     <meta charset="UTF-8">
-    <title>Tranquility</title>
+    <title>Tranquillity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -11,7 +11,7 @@
 
   <body>
     <div class="container">
-        <h1>Tranquility</h1>
+        <h1>Tranquillity</h1>
         <div class="bird-container bird-container--one">
           <div class="bird bird--one"></div>
         </div>
