--- a/www/index.html
+++ b/www/index.html
@@ -2,16 +2,16 @@
 <html lang="en" >
   <head>
     <meta charset="UTF-8">
-    <title>Tranquillity</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Tranquility</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
     <link rel="stylesheet" href="./css/normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/ico" href="./favicon.ico">
   </head>
-
   <body>
-    <div class="container">
-        <h1>Tranquillity</h1>
+        <div class="container">
+          <h1>Tranquility</h1>
+        </div>
         <div class="bird-container bird-container--one">
           <div class="bird bird--one"></div>
         </div>
@@ -24,6 +24,5 @@
         <div class="bird-container bird-container--four">
           <div class="bird bird--four"></div>
         </div>
-    </div>
   </body>
 </html>
